--- a/10_final_project/01_solar_flares.ipynb
+++ b/10_final_project/01_solar_flares.ipynb
@@ -302,7 +302,7 @@
     "- Présentation des objectifs, de la méthodologie, des résultats et des conclusions.\n",
     "- Recommandations pour les améliorations futures et les applications pratiques du modèle.\n",
     "\n",
-    "En suivant ce plan, vous pourrez créer un modèle de prédiction des éruptions solaires qui pourra potentiellement être utilisé pour prévenir les impacts des éruptions solaires sur les technologies terrestres."
+    "En suivant ce plan, vous pourrer créer un modèle de prédiction des éruptions solaires qui pourra potentiellement être utilisé pour prévenir les impacts des éruptions solaires sur les technologies terrestres."
    ]
   }
  ],
