--- a/10_final_project/02_python_code_generator.ipynb
+++ b/10_final_project/02_python_code_generator.ipynb
@@ -14,43 +14,45 @@
     "Combine traitement du langage naturel (NLP) et génération de code. \n",
     "\n",
     "### 1. Définir les spécifications\n",
-    "Commencez par définir clairement ce que le générateur de code doit faire :\n",
+    "Commencer par définir clairement ce que le générateur de code doit faire :\n",
     "- Prendre une description en français en entrée.\n",
     "- Produire un code Python correspondant à cette description.\n",
     "- Gérer différentes tâches (par exemple, manipulation de fichiers, calculs mathématiques, gestion de bases de données, etc.).\n",
     "\n",
     "### 2. Collecter des données\n",
-    "Collectez un ensemble de descriptions en français avec leurs équivalents en code Python. Ces données seront utilisées pour entraîner un modèle de NLP.\n",
+    "* Collecter un ensemble de descriptions en français avec leurs équivalents en code Python. \n",
+    "* Aucune idées de comment faire...\n",
+    "* Ces données seront utilisées pour entraîner un modèle de NLP.\n",
     "\n",
     "### 3. Prétraiter les données\n",
-    "Effectuez un prétraitement sur les descriptions en français :\n",
+    "Effectuer un prétraitement sur les descriptions en français :\n",
     "- Nettoyage du texte (suppression des caractères spéciaux, conversion en minuscules, etc.).\n",
     "- Tokenisation (division du texte en mots ou en phrases).\n",
     "\n",
     "### 4. Choisir un modèle de NLP\n",
-    "Choisissez un modèle de NLP pour la compréhension du langage et la génération de texte. Quelques options incluent :\n",
+    "Choisisser un modèle de NLP pour la compréhension du langage et la génération de texte. Quelques options incluent :\n",
     "- **GPT-4** ou un modèle similaire : capable de comprendre des descriptions en langage naturel et de générer du code.\n",
     "- **T5 (Text-to-Text Transfer Transformer)** : un modèle qui peut être entraîné pour transformer des descriptions en code.\n",
     "\n",
     "### 5. Entraînement du modèle\n",
-    "Entraînez le modèle sur votre jeu de données prétraité. Cela peut nécessiter des ressources de calcul importantes et des techniques de régularisation pour éviter le surapprentissage.\n",
+    "Entraîner le modèle sur votre jeu de données prétraité. Cela peut nécessiter des ressources de calcul importantes et des techniques de régularisation pour éviter le surapprentissage.\n",
     "\n",
     "### 6. Implémentation du générateur de code\n",
-    "Développez le générateur de code en intégrant le modèle entraîné dans un script Python. Voici un exemple simple en utilisant une API de modèle pré-entraîné (comme GPT-4 via OpenAI API) :\n",
+    "Développer le générateur de code en intégrant le modèle entraîné dans un script Python. Voici un exemple simple en utilisant une API de modèle pré-entraîné (comme GPT-4 via OpenAI API) :\n",
     "\n",
     "```python\n",
     "import openai\n",
     "\n",
-    "# Configuration de l'API (remplacez 'your-api-key' par votre clé API)\n",
+    "# Configuration de l'API (remplacer 'your-api-key' par votre clé API)\n",
     "openai.api_key = 'your-api-key'\n",
     "\n",
     "def generer_code(description):\n",
     "    try:\n",
     "        # Appel à l'API OpenAI pour générer du code\n",
     "        reponse = openai.Completion.create(\n",
-    "            engine=\"text-davinci-003\",  # Utilisez le moteur approprié\n",
-    "            prompt=f\"Écrivez un script Python pour : {description}\",\n",
-    "            max_tokens=150  # Ajustez selon vos besoins\n",
+    "            engine=\"text-davinci-003\",  # Utiliser le moteur approprié\n",
+    "            prompt=f\"Écriver un script Python pour : {description}\",\n",
+    "            max_tokens=150  # Ajuster selon vos besoins\n",
     "        )\n",
     "        code = reponse.choices[0].text.strip()\n",
     "        return code\n",
@@ -64,10 +66,10 @@
     "```\n",
     "\n",
     "### 7. Évaluation et amélioration\n",
-    "Testez le générateur de code avec différentes descriptions et évaluez la qualité du code produit. Recueillez des feedbacks pour améliorer le modèle.\n",
+    "Tester le générateur de code avec différentes descriptions et évaluer la qualité du code produit. Recueiller des feedbacks pour améliorer le modèle.\n",
     "\n",
     "### 8. Interface utilisateur\n",
-    "Créez une interface utilisateur simple où les utilisateurs peuvent entrer leurs descriptions en français et obtenir le code Python généré. Cela peut être fait en utilisant des frameworks comme Flask ou Django pour une application web, ou même une interface en ligne de commande pour les versions initiales.\n",
+    "Créer une interface utilisateur simple où les utilisateurs peuvent entrer leurs descriptions en français et obtenir le code Python généré. Cela peut être fait en utilisant des frameworks comme Flask ou Django pour une application web, ou même une interface en ligne de commande pour les versions initiales.\n",
     "\n",
     "### Exemple complet\n",
     "\n",
@@ -76,14 +78,14 @@
     "```python\n",
     "import openai\n",
     "\n",
-    "# Remplacez 'your-api-key' par votre clé API\n",
+    "# Remplacer 'your-api-key' par votre clé API\n",
     "openai.api_key = 'your-api-key'\n",
     "\n",
     "def generer_code(description):\n",
     "    try:\n",
     "        reponse = openai.Completion.create(\n",
     "            engine=\"text-davinci-003\",\n",
-    "            prompt=f\"Écrivez un script Python pour : {description}\",\n",
+    "            prompt=f\"Écriver un script Python pour : {description}\",\n",
     "            max_tokens=150,\n",
     "            n=1,\n",
     "            stop=None,\n",
@@ -96,12 +98,12 @@
     "\n",
     "# Interface utilisateur simple en ligne de commande\n",
     "if __name__ == \"__main__\":\n",
-    "    description = input(\"Décrivez ce que vous voulez faire en Python : \")\n",
+    "    description = input(\"Décriver ce que vous vouler faire en Python : \")\n",
     "    code_genere = generer_code(description)\n",
     "    print(\"\\nCode généré :\\n\", code_genere)\n",
     "```\n",
     "\n",
-    "Avec cette approche, vous pouvez commencer à développer un générateur de code Python basé sur des descriptions en français. Notez que l'amélioration du modèle et de l'interface utilisateur nécessitera des itérations et des ajustements basés sur les retours des utilisateurs."
+    "Avec cette approche, vous pouver commencer à développer un générateur de code Python basé sur des descriptions en français. Noter que l'amélioration du modèle et de l'interface utilisateur nécessitera des itérations et des ajustements basés sur les retours des utilisateurs."
    ]
   },
   {
@@ -114,7 +116,7 @@
     "\n",
     "#### a. **GitHub Repositories**\n",
     "- **GitHub** est une source riche en projets open-source où les descriptions des fonctionnalités (issues, pull requests) et le code source sont souvent bien documentés.\n",
-    "- Utilisez l'API GitHub pour extraire des données :\n",
+    "- Utiliser l'API GitHub pour extraire des données :\n",
     "  - Issues : Contiennent souvent des descriptions de problèmes ou de fonctionnalités.\n",
     "  - Pull Requests : Souvent accompagnées de descriptions et du code correspondant.\n",
     "\n",
@@ -129,7 +131,7 @@
     "### 2. Datasets Disponibles sur Kaggle\n",
     "\n",
     "#### a. **Kaggle Datasets**\n",
-    "- **Kaggle** propose de nombreux datasets liés à la programmation et aux descriptions en langage naturel. Recherchez des mots-clés tels que \"code generation\", \"text to code\", ou \"program synthesis\".\n",
+    "- **Kaggle** propose de nombreux datasets liés à la programmation et aux descriptions en langage naturel. Rechercher des mots-clés tels que \"code generation\", \"text to code\", ou \"program synthesis\".\n",
     "- Exemple : [StackOverflow Data](https://www.kaggle.com/stackoverflow/stackoverflow) contient des questions, des réponses, et des tags associés.\n",
     "\n",
     "#### b. **Kaggle Competitions**\n",
@@ -143,12 +145,12 @@
     "\n",
     "#### b. **Natural Language to Code (NL2Code)**\n",
     "- **NL2Code** est un autre dataset utilisé pour la génération de code à partir de descriptions en langage naturel. Il est souvent utilisé dans des travaux de recherche en NLP.\n",
-    "- Recherchez des publications et des datasets associés à des conférences telles que ACL, EMNLP, ou NeurIPS.\n",
+    "- Rechercher des publications et des datasets associés à des conférences telles que ACL, EMNLP, ou NeurIPS.\n",
     "\n",
     "### 4. Création de votre propre Dataset\n",
-    "Si vous ne trouvez pas de dataset parfaitement adapté, vous pouvez envisager de créer le vôtre :\n",
-    "- **Web Scraping** : Utilisez des techniques de web scraping pour extraire des descriptions et du code depuis des sites web comme GitHub ou StackOverflow.\n",
-    "- **Crowdsourcing** : Utilisez des plateformes comme Amazon Mechanical Turk pour obtenir des descriptions en langage naturel et les faire annoter par des développeurs.\n",
+    "Si vous ne trouver pas de dataset parfaitement adapté, vous pouver envisager de créer le vôtre :\n",
+    "- **Web Scraping** : Utiliser des techniques de web scraping pour extraire des descriptions et du code depuis des sites web comme GitHub ou StackOverflow.\n",
+    "- **Crowdsourcing** : Utiliser des plateformes comme Amazon Mechanical Turk pour obtenir des descriptions en langage naturel et les faire annoter par des développeurs.\n",
     "\n",
     "### Exemples de Datasets\n",
     "- **CodeSearchNet** : [CodeSearchNet on GitHub](https://github.com/github/CodeSearchNet)\n",
@@ -161,7 +163,7 @@
     "```python\n",
     "import requests\n",
     "\n",
-    "# Remplacez par votre token GitHub\n",
+    "# Remplacer par votre token GitHub\n",
     "GITHUB_TOKEN = 'your-github-token'\n",
     "headers = {'Authorization': f'token {GITHUB_TOKEN}'}\n",
     "\n",
@@ -178,7 +180,7 @@
     "\n",
     "```\n",
     "\n",
-    "Avec ces ressources et approches, vous devriez être bien équipé pour collecter les données nécessaires à votre projet de génération de code Python à partir de descriptions en français (ou en anglais)."
+    "Avec ces ressources et approches, vous devrier être bien équipé pour collecter les données nécessaires à votre projet de génération de code Python à partir de descriptions en français (ou en anglais)."
    ]
   }
  ],
